# axum-api-dbase

./: .env  .gitignore  Cargo.toml  README.md
db/: test.db  test.db-shm  test.db-wal
migrations/: 20221230215019_create_test_table.sql  20230102033258_initial_create.sql
src/: main.rs
