[package]
name = "axum-api-core"
version = "0.1.0"
authors = ["Jeffery D. Mitchell", "<sentinel1909@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
color-eyre = "0.6.2"
tracing = "0.1.37" 
tracing-subscriber = "0.3.16"
